fix alignment of summary and calendar

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,8 @@
 .yearLabel:hover {
   cursor: pointer;
 }
+
+.row, .col {
+  align-items: center;
+  justify-content: center;
+}
